--- a/client/src/css/App.css
+++ b/client/src/css/App.css
@@ -19,7 +19,8 @@
 
 .homecontainer{
     width:95%;
-    height:100vh;
+    height:100%;
+    max-height:100%;
     margin-bottom:10%;
     align-items:left;
 }
