--- a/client/src/css/Home.css
+++ b/client/src/css/Home.css
@@ -45,9 +45,21 @@
 
   .activityCard{
     width: 100%;
+    height: 250px;
     outline: 2px solid black;
-    align-items: center
+    align-items: center;
+    margin-top: 30px
   }
-  .platformBytton{
-      
+
+  .activityCardButton{
+    position: absolute;
+    bottom: 0px;
+    inline-size: 200px;
+    overflow-wrap: break-word;
+  }
+
+  .activityCardImage{
+    max-width: auto;
+    height: 150px;
+    object-fit: cover;
   }
