--- a/client/src/css/SearchResult.css
+++ b/client/src/css/SearchResult.css
@@ -17,7 +17,7 @@
 .search{
     max-height: 100%;
     width:98%;
-    height:100vh;
+    /*height:100vh;*/
     padding: 1%;
     align-content: center;
 }
