--- a/client/src/css/Home.css
+++ b/client/src/css/Home.css
@@ -49,7 +49,7 @@
   }
 
   .activityCard{
-    width: 100%;
+    width: 250px;
     height: 250px;
     outline: 2px solid black;
     align-items: center;
