--- a/client/src/css/Home.css
+++ b/client/src/css/Home.css
@@ -68,3 +68,24 @@
     height: 150px;
     object-fit: cover;
   }
+
+  .subscriptionrow{
+    margin-top: 8px;
+  }
+
+  .subscriptionbutton{
+    background: #E7C496;
+    border: 1px solid black;
+    color: black;
+    font-size: 20px;
+  }
+  .subscriptionbutton:hover, .subscriptionbutton:focus{
+    background: #D4AC67;
+  }
+  .subscriptions{
+    width: 150px;
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    text-align: left;
+  }
