--- a/client/src/css/Home.css
+++ b/client/src/css/Home.css
@@ -93,3 +93,13 @@
     text-overflow: ellipsis;
     text-align: left;
   }
+
+  .selection{
+    border: 0;
+    border-radius: 2px;
+    border-top-right-radius: 0px;
+    border-bottom-right-radius: 0px;
+    height: 30px;
+    margin-top: 15px;
+   
+  }
