--- a/client/src/css/Home.css
+++ b/client/src/css/Home.css
@@ -103,3 +103,16 @@
     margin-top: 15px;
    
   }
+
+  .topuserrow{
+    margin-top:8px;
+    margin-right:15px;
+  }
+
+  .topuser{
+    width: 120px;
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    text-align: left;
+  }
