--- a/client/src/css/SearchBar.css
+++ b/client/src/css/SearchBar.css
@@ -13,6 +13,7 @@
     padding: 15px;
     height: 30px;
     width: 1000px;
+    box-shadow: rgb(0 0 0 / 24%) 2px 2px 1px 1px, rgb(0 0 0 / 24%) 0px 0px 1px 0px;
   }
   
   .searchIcon {
