--- a/client/src/css/UserBadgesFeed.css
+++ b/client/src/css/UserBadgesFeed.css
@@ -1,7 +1,58 @@
+html, body, #root, .badge-background{
+    height: 100%;
+    overflow:auto;
+}
+
+.badge-background {
+    
+  
+    /*background-image: url("./img/quizBackgournd.png");*/
+ 
+  
+    background-color: #87CEEB;
+    margin: 0 auto;
+    height: 100%;
+    width: 100%;
+  }
+  
+  .badge-content {
+    
+    max-width: 90%;
+    border-color: #000000;
+    border-style: solid;
+    border-radius: 25px;
+    background-color: #E7C496;
+    margin: 0 auto;
+  }
+  .badge-content-header {
+    
+    text-align: center;
+    font-size: 30px;
+    height: 50px;
+    width: 90%;
+    border-color: #000000;
+    border-style: solid;
+    background-color: #F3ECC9;
+    margin-top:10px;
+    margin-bottom:0;
+    margin-left:auto;
+    margin-right:auto;
+  }
+
+
 .myBadgesFeed {
     align-items: left;
 }
 
 .activityCard {
     align-items: left;
+}
+.badgeTitle{
+    font-size: 20px;
+    font-weight: bold;
+    
+}
+.badgeDescription{
+    font-size: 15px;
+    
 }
