--- a/client/src/css/Platform.css
+++ b/client/src/css/Platform.css
@@ -49,10 +49,17 @@
         overflow-wrap: break-word;
         width: 100%;
         height: 100%;
+        width: fit-content;
+        
     }
+    .platformActivityCardEditButton{
+      background-color: coral;
+      
+  }
     .platformActivityCardButtonPostRow{
         vertical-align: middle;
         margin-top: 1%;
+        margin-right:3.4%;
         height: inherit;
     }
     .platformActivityCardButtonQuizRow{
